--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
 	"dependencies": {
 		"@emotion/react": "^11.10.6",
 		"@emotion/styled": "^11.10.6",
+		"@hookform/resolvers": "^3.0.1",
 		"@mui/icons-material": "^5.11.11",
 		"@mui/material": "^5.11.15",
 		"@reduxjs/toolkit": "^1.9.3",
@@ -25,7 +26,8 @@
 		"sass": "^1.61.0",
 		"tss-react": "^4.8.2",
 		"typescript": "^4.9.5",
-		"web-vitals": "^2.1.4"
+		"web-vitals": "^2.1.4",
+		"yup": "^1.0.2"
 	},
 	"scripts": {
 		"start": "react-scripts start",
