--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,9 @@
 		"@types/node": "^16.18.23",
 		"@types/react": "^18.0.31",
 		"@types/react-dom": "^18.0.11",
+		"@types/react-highcharts": "^16.0.3",
 		"axios": "^1.3.4",
+		"highcharts-react-official": "^3.2.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-hook-form": "^7.43.9",
