--- a/client/package.json
+++ b/client/package.json
@@ -17,10 +17,11 @@
 		"@types/node": "^16.18.23",
 		"@types/react": "^18.0.31",
 		"@types/react-dom": "^18.0.11",
-		"@types/react-highcharts": "^16.0.3",
 		"axios": "^1.3.4",
-		"highcharts-react-official": "^3.2.0",
+		"chart.js": "^4.2.1",
+		"moment": "^2.29.4",
 		"react": "^18.2.0",
+		"react-chartjs-2": "^5.2.0",
 		"react-dom": "^18.2.0",
 		"react-hook-form": "^7.43.9",
 		"react-redux": "^8.0.5",
@@ -57,6 +58,7 @@
 		]
 	},
 	"devDependencies": {
+		"@faker-js/faker": "^7.6.0",
 		"prettier": "^2.8.7"
 	}
 }
