--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -3,13 +3,13 @@ version: '3'
 services:
   postgresql:
     image: postgres
-    container_name: server
+    container_name: lesson
     ports:
-      - '5432:5432'
+      - 5432:5432
     environment:
       - POSTGRES_HOST=localhost
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=qwerty
-      - POSTGRES_DATABASE=lesson
+      - POSTGRES_DB=lesson
     command: postgres
     restart: always
